--- a/project.config
+++ b/project.config
@@ -1,11 +1,2 @@
 [access]
-	inheritFrom = All-Projects
-[access "refs/for/refs/heads/*"]
-	pushMerge = group Samsung Tab S2 Maintainers
-[access "refs/heads/*"]
-	create = group Samsung Tab S2 Maintainers
-	push = +force group Samsung Tab S2 Maintainers
-	pushMerge = group Samsung Tab S2 Maintainers
-	label-Code-Review = -2..+2 group Samsung Tab S2 Maintainers
-	label-Verified = -1..+1 group Samsung Tab S2 Maintainers
-	submit = group Samsung Tab S2 Maintainers
+	inheritFrom = android_device_qcom_common
